Mobile xoverflow and margin fix

--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -1,6 +1,6 @@
 .main{
     margin: 6rem auto 3rem;
-    width: min(90vw,1500px);
+    max-width: 80rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -50,13 +50,13 @@
     padding: 0;
 }
 
-.picture > div{
+.picture > img{
     border-radius: 50%;
     border: 3px solid #ffa500;
     transition: all 0.2s ease;
 }
 
-.picture > div:hover{
+.picture > img:hover{
     border: 3px solid white;
     box-shadow: 0px 3px 20px rgba(0,0,0,0.2);
     transform: translateY(-5px);
@@ -77,7 +77,7 @@
     padding: 0;
     margin: 0;
 }
-@media (max-width: 1068px) {
+@media (max-width: 1280px) {
     .main{
         max-width: 100%;
         padding: 0 30px;
