--- a/styles/Tracks.module.css
+++ b/styles/Tracks.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-    width: min(90vw,1500px);
+    max-width: 80rem;
     justify-content: center;
     align-items: center;
 }
@@ -52,10 +52,12 @@ flex: 33%;
     max-width: 100%;
 }
 
-@media (max-width: 1068px) {
+@media (max-width: 1280px) {
     .tracks{
         justify-content: flex-start;
         align-items: flex-start;
+        width: 100%;
+        padding: 0;
     }
     .track{
         flex-direction: column-reverse;
@@ -72,5 +74,8 @@ flex: 33%;
     }
     .link{
         margin: 1rem 0;
+    }
+    .footer{
+        padding: 0 30px;
     }
 }
